--- a/index.css
+++ b/index.css
@@ -112,13 +112,15 @@ img {
     display: flex;
     gap: 10px;
     align-items: center;
-    padding: 0% 10%;
+    padding: 0% 4%;
     flex-direction: column;
 }
 
 
 .images img {
-    width: 30%;
-    max-width: 30%;
+    width: 32%;
+    aspect-ratio: 1 / 1;
+    max-width: 32%;
     border-radius: 10px;
+    object-fit: cover;
 }
