--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ img {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: linear-gradient(rgba(4, 8, 28, 0.5), rgba(4, 8, 28, 0.5)), url(your-diy-guide-to-pretty-kitchen.jpg);
+    background-image: linear-gradient(rgba(4, 8, 28, 0.5), rgba(4, 8, 28, 0.5)), url(your-diy-guide-to-pretty-kitchen.jpg);
 
 }
 
